src/test/resources/model_test/valid/FourEntitiesModel/Gender.entity
Gender 

{ 
	id : string { @Id  @SizeMax(2) };
	name : string;
}