src/test/resources/model_test/invalid/FourEntities_model/Gender.entity
Gender { 
	id : string{@Ident}; // Bad annotation
	name : string;
}